arrumando view para mostra o que tiver apenas
arrumando view para mostra o que tiver apenas

--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -15,33 +15,57 @@
 </style>
 <h3>NOTÍCIA</h3>
 <hr>
+
 <div class="card mt-4">
    <div class="card-header text-center">
       <b><h4>{{noticias.titulo}}</h4></b>
       <small>descricao: {{noticias.descricao}}</small><br>
       <small>Autor: {{noticias.autor}}</small><br>
    </div>
+
    <div class="card-body">
       <div class="row">
-         <div class="col-12 text-center">
-            <img src="../upload{{noticias.imagem}}" class="doze" />
-         </div>
-         <br>
+             
+        {{#if noticias.imagem}}
+               <div class="col-12 text-center">
+               
+                  <img src="../upload{{noticias.imagem}}" class="doze" />
+
+               </div>
+               <br>
+        {{else}}
+         <p>sem img</p>
+      {{/if}}       
+        
          <div class="col-12">
             <div class="container">
                <h6 align="justify" class="text-center"> Conteúdo: {{noticias.conteudo}}</h6>
             </div>
          </div>
+
+      
+            {{#if noticias.video}}
+               <div class="col-12 text-center">
+                  <video width="320" height="240" controls>
+                     <source src="../upload{{noticias.video}}" type="video/mp4">
+                  </video>
+               </div>
+                  {{else}}
+                     <p>sem video</p>
+            {{/if}}
+
          <div class="col-12 text-center">
-            <video width="320" height="240" controls>
-               <source src="../upload{{noticias.video}}" type="video/mp4">
-            </video>
-         </div>
-         <div class="col-12 text-center">
+         {{#if noticias.audio}}
+
             <audio controls>
                <source src="../upload{{noticias.audio}}" type="audio/mpeg">
             </audio>
          </div>
+         {{else}}
+         <p>sem audio</p>   
+         {{/if}}
+
+
       </div>
     </div>
    <div class="card-footer text-muted">
