--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,8 +60,10 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-6">
+                                {{#if imagem}}
                                 <a href="/homeNoticias/{{id}}"><img class="doze" style="max-width: 250px; max-height:250px"
                                         src="../upload{{imagem}}"></a>
+                                {{/if}}
                             </div>
                             <div class="col-6">
                                 <div class="text-center">
