--- a/views/produto/index.handlebars
+++ b/views/produto/index.handlebars
@@ -28,8 +28,10 @@
     <div class="card-body">
         <div class="row">
             <div class="col-6">
+                {{#if imagem}}
                 <a href="/homeProduto/{{_id}}">
                 <img class="doze " src="../uploadProduto{{imagem}}"></a>
+                {{/if}}
             </div>
             <div class="col-6">
                 <p class="texto-tutorial" class="ponto-coleta-texto">{{texto}}<small>
