--- a/views/tutoriais/homeTutorial.handlebars
+++ b/views/tutoriais/homeTutorial.handlebars
@@ -25,7 +25,9 @@
     <div class="card-body">
         <div class="row">
             <div class="col-12 text-center">
+                {{#if tutorial.imagem}}
                 <img src="../uploadTutorial{{tutorial.imagem}}" class="doze" />
+                {{/if}}
             </div>
             <br>
             <div class="col-12">
@@ -34,14 +36,18 @@
                 </div>
             </div>
             <div class="col-12 text-center">
+                {{#if tutorial.video}}
                 <video width="320" height="240" controls>
                     <source src="../uploadTutorial{{tutorial.video}}" type="video/mp4">
                 </video>
+                {{/if}}
             </div>
             <div class="col-12 text-center">
+                {{#if tutorial.audio}}
                 <audio controls>
                     <source src="../uploadTutorial{{tutorial.audio}}" type="audio/mpeg">
                 </audio>
+                {{/if}}
             </div>
         </div>
     </div>
