--- a/views/tutoriais/index.handlebars
+++ b/views/tutoriais/index.handlebars
@@ -28,8 +28,10 @@
     <div class="card-body">
         <div class="row">
             <div class="col-6">
+                {{#if imagem}}
                 <a href="/homeTutorial/{{_id}}">
                 <img class="doze " src="../uploadTutorial{{imagem}}"></a>
+                {{/if}}
             </div>
             <div class="col-6">
                 <p align="justify" class="texto-tutorial" class="ponto-coleta-texto">{{texto}}<small>
